--- a/brooke/index.html
+++ b/brooke/index.html
@@ -120,16 +120,17 @@ To get started making this document, you'll need to download the zip file from G
 
     <div class="flex-3item-center">
       <img src="img7.jpg" style="width:98%" alt="describe image here">
-      <p class="caption">p Clothes but in rainbow order </p>
+      <p class="caption">Clothes aligned in rainbow order</p>
     </div>
 
     <div class="flex-3item-right">
       <img src="img8.jpg" style="width:98%" alt="describe image here">
-      <p class="caption" 
+      <p class="caption">A sign in the thrift store</p> 
      </p>
     </div>
-A sign in the thrift store
   </div>
+  </div>
+  
 
 
 <!--Audio interview another person - this activity is a great way for you to connect with others. Prepare a list of questions to ask your interviewee, but feel free to go off script. Why is this space important to this individual? What did they learn during their visit? Do they want to spend more time in the woods? Etc.-->
@@ -137,6 +138,7 @@ A sign in the thrift store
   <div id="interview" class="bg-b">
     <div class="header"><h1>Interview</h1>
     <div class="flex-container">
+
       <div class="flex-2item-left">
         <img src="img9.jpg" style="width:100%" alt="describe image here">
       </div>
@@ -144,9 +146,13 @@ A sign in the thrift store
       <p>I interviewed Elena. We asked questions and answered them, This discussion was valuable because we talked about nature!</p>
 
   
-      <audio>
-            <source src="aud1.mp3" type="audio/mpeg">
-        </audio>   
+      <audio controls>
+<source src="aud1.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
+  </div>
+  </div>
   </div>
   </div>
 
