--- a/arlo/index.html
+++ b/arlo/index.html
@@ -171,17 +171,17 @@ Your browser does not support the audio element.
     <div class="modal-content">
       <span class="close">&times;</span>
       <img src="img2.jpg" style="width:50%" alt="describe image here">
-      <p style="color:black"><p>this is a bee garden. It has lots of plants that bees like and bee houses for bees. this is important because they help bees, that polonate/help nature.we should add more of them because they help the innviorment, and they look pretty </p>
+      <p style="color:black">this is a bee garden. It has lots of plants that bees like and bee houses for bees. this is important because they help bees, that polonate/help nature.we should add more of them because they help the innviorment, and they look pretty </p>
       </div>
   </div>
-<div
+
 
 <!-- Modal 2-->
 <div id="myModal2" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
         <img src="img3.jpg" style="width:50%" alt="describe image here">
-    <p style="color:black"><p>green roofs can help lower heating and cooling costs while helping the enviorment.</p></p>
+    <p style="color:black">green roofs can help lower heating and cooling costs while helping the enviorment.</p>
   </div>
 </div>
 
@@ -190,7 +190,7 @@ Your browser does not support the audio element.
   <div class="modal-content">
     <span class="close">&times;</span>
        <img src="img4.jpg" style="width:50%" alt="describe image here">
-    <p style="color:black"><p>this is a rain garden. rain gardens are gardens that are made to drain water from streets and lawns. locations?</p></p>
+    <p style="color:black"><p>this is a rain garden. rain gardens are gardens that are made to drain water from streets and lawns. locations?</p>
   </div>
 
 </div>
