--- a/faraday/index.html
+++ b/faraday/index.html
@@ -122,7 +122,7 @@ To get started making this document, you'll need to download the zip file from G
       <img src="img7.jpg" style="width:98%" alt="describe image here">
       <p class="caption">look at how many bikes there are</p>
     </div>
-Bike cave
+
     <div class="flex-3item-right">
       <img src="img8.jpg" style="width:98%" alt="describe image here">
       <p class="caption">Bikes for sale get your fresh bikes</p>
@@ -171,28 +171,28 @@ Your browser does not support the audio element.
     <div class="modal-content">
       <span class="close">&times;</span>
       <img src="img3.jpg" style="width:50%" alt="describe image here">
-      <p style="color:black"><p>this is the food pantry anyone who is food insecure can come here and depending on the size of their houshold they get an amount of food</p>
-      
+      <p style="color:black">This is the food pantry anyone who is food insecure can come here and depending on the size of their houshold they get an amount of food</p>
   </div>
-<div>
+  </div>
+
 
 <!-- Modal 2-->
 <div id="myModal2" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
         <img src="img4.jpg" style="width:50%" alt="describe image here">
-    <p style="color:black"><p>Thriftsburgh is a thriftstore that started as a student project</p></div>
+    <p style="color:black">Thriftsburgh is a thriftstore that started as a student project</p>
   </div>
 </div>
+
 
 <!-- Modal 3-->
 <div id="myModal3" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
        <img src="img5.jpg" style="width:50%" alt="describe image here">
-    <p style="color:black"><p>pollinator gardens help take carbon dioxyide from the air and make buildings prettier</p>
+    <p style="color:black">Pollinator gardens help take carbon dioxyide from the air and make buildings prettier</p>
   </div>
-
 </div>
 
 
