--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 <div class="textblock" style="text-align: left">
-<h2>Thanks for a great exploration!</h2>
+<h2>Thanks for a great day exploring sustainable design together! -Dr. Steve</h2>
   </div>
 
 
